fix(shell): fix invisible search entry hover bg
Fixes #529

--- a/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
+++ b/gnome-shell/src/gnome-shell-sass/widgets/_search-entry.scss
@@ -9,13 +9,13 @@ $search_entry_height: 36px;
   padding: $base_padding+1 $base_padding+3;
   border-radius: $search_entry_height * 0.5; // half the height
   color: transparentize($fg_color,0.3);
-  background-color: $bg_color;
+  background-color: $search_entry_bg_color;
   border-color: $borders_color;
   margin-top: $base_spacing * 2;
   margin-bottom: $base_spacing;
 
   &:hover {
-    background-color: $hover_bg_color;
+    background-color: $search_entry_bg_color;
     border-color: $hover_borders_color;
     color: $hover_fg_color;
   }
